feat(marking): [Task1] fix filter - integer filtering for order does not work(#7955)
Signed-off-by: johanah29 <johanah.lekeu@filigran.io>